# ai_se_week2_assignment_ai_tools

./: README.md  requirements.txt  theory_answers.md
bonus/: README.md  app.py  index.py  mnist_cnn_improved_model.h5  pyproject.toml  requirements.txt  vercel.json
docs/: env-loader.js  index.html  presentation.html
practical/scikit-learn/: iris_decision_tree.ipynb
practical/spacy/: nlp_spacy.ipynb
practical/tensorflow/: mnist_cnn.ipynb
