[tool.poetry]
name = "gradio-machine-learning"
version = "0.1.0"
description = "A Gradio/TensorFlow ML project"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
gradio = ">=4.0.0" # Allow latest 4.x or 5.x
tensorflow-cpu = "*"
numpy = "*"
Pillow = "*"
gradio-client = ">=1.0.0" # Allow latest compatible client

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"